@@ -29,6 +29,7 @@ rb-toggle-gui=Bauplanbuch
 add-to-favorites=Füge es zu den Favoriten hinzu
 back-to=Zürck zu __1__\nRechtsklick um auf Home zu gelangen
 close-quick-reference=Schließen der Schnellreferenztafel
+crafter=Maschine
 fluid=Flüssigkeit
 forward-to=Weiter zu __1__
 general=Allgemeines
@@ -40,7 +41,6 @@ ingredient-in=Zutat in (__1__)
 ingredients=Zutaten (__1__)
 item=Gegenstand
 keep-open=Offen behalten
-machine=Maschine
 made-in=Gemacht in (__1__)
 material-lowercase=Material
 material=Material
@@ -60,8 +60,8 @@ search-by=Suche nach:
 search=Suche
 settings=Einstellungen
 technology=Technologie
-unresearched=Nicht erforscht
 unlocked-by=Freigeschaltet von (__1__)
+unresearched=Nicht erforscht
 view-details=Zeige Einzelheiten
 
 [rb-message]
