@@ -28,17 +28,18 @@ rb-use-internal-names=Use internal prototype names for objects and searching. Yo
 rb-toggle-gui=Recipe Book
 
 [item-name]
-rb-machine-blueprint=Temporary machine blueprint
+rb-crafter-blueprint=Temporary crafter blueprint
 
 [item-description]
-rb-machine-blueprint=A temporary blueprint provided by the Recipe Book to quickly place a machine with a specific recipe. Cannot be kept in the inventory or saved to the blueprint library.
+rb-crafter-blueprint=A temporary blueprint provided by the Recipe Book to quickly place a crafter with a specific recipe. Cannot be kept in the inventory or saved to the blueprint library.
 
 [rb-gui]
 add-to-favorites=Add to favorites
 back-to=Back to __1__\nRight-click to go home
-blueprint-not-available=A blueprint is not available for this machine.
+blueprint-not-available=A blueprint is not available for this crafter.
 click-to-get-blueprint=Click to get a blueprint.
 close-quick-reference=Close quick reference panel
+crafter=Crafter
 favorites=Favorites
 fluid=Fluid
 forward-to=Forward to __1__
@@ -51,7 +52,6 @@ ingredient-in=Ingredient in (__1__)
 ingredients=Ingredients (__1__)
 item=Item
 keep-open=Keep open
-machine=Machine
 made-in=Made in (__1__)
 material-lowercase=material
 material=Material
