@@ -1,0 +1,3 @@
+{
+  "item-name": [["ee-temporary-machine-blueprint", "ee-temporary-crafter-blueprint"]]
+}
