@@ -3,6 +3,7 @@ Version: 2.0.5
 Date: ????
   Changes:
     - All recipe ingredients and products will always be shown despite object visibility settings
+    - Renamed "machine" back to "crafter" as the reason for the name change is moot at this point
   Bugfixes:
     - Fixed a crash when opening a quick reference panel for a hidden recipe, when show hidden objects is turned off
     - Fixed a crash when a mod would removed while translations were running, but before those translations translated all of that mod's strings
